footer was getting too wide (bug 794425)

--- a/media/css/mkt/login.less
+++ b/media/css/mkt/login.less
@@ -109,7 +109,6 @@
         clear: both;
     }
     #site-footer > div {
-        .max-width(14);
         margin: 0 auto;
         &:after {
             content: "";
@@ -145,9 +144,6 @@
     .login #welcome:before {
         .background-size(auto 80%);
         background-position: 62% 90%;
-    }
-    #site-footer > div {
-        .width(10);
     }
 }
 
